style: correction of backgroud and user agent margin

--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="../src/assets/styles/reset.css" />
 
     <link rel="stylesheet" href="../src/assets/styles/reboot.css" />
-    <link rel="stylesheet" href="../src/assets/styles/reset.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>Guifaffinity</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
